--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,8 +28,14 @@ jobs:
     - name: Revive Action
       uses: morphy2k/revive-action@v2.4.1
 
-    - name: Staticcheck
-      uses: dominikh/staticcheck-action@v1.3.0
+    - name: Install Staticcheck
+      run: |
+        go install honnef.co/go/tools/cmd/staticcheck@v0.6.1
+        echo "${HOME}/go/bin" >> $GITHUB_PATH
+
+    - name: Run Staticcheck
+      run: staticcheck ./...
+
 
     - name: Build
       run: |
